tests/errors/chained_comparison_eq.ki
discard 1 == 1 == 1
